<resources>
    <string name="app_name">Bible-ly</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="delete_event">Are you sure you want to delete event?</string>
    <string name="event_deleted">Event Deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="you_shared_note">You have shared this note</string>
    <string name="others_shared_note">This Note is shared with your class</string>
    <string name="note_has_comment">This note has comments</string>
    <string name="note_chapter_num">Chapter: %1$s</string>
    <string name="note_verse_num">Verse: %1$s</string>


    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="permission_denied">You denied the permission</string>
    <string name="failed_get_image">Failed to get image</string>

    <string name="remove_student">Are you sure you want to remove the student?</string>
    <string name="student_removed">Student Removed</string>
    <string name="promote_student">Are you sure you want to promote this student to teacher?
You will be removed from the class</string>
    <string name="caution">Caution</string>
    <string name="student_promoted">Student Promoted</string>

    <string name="share_text">Join Bible-ly with Token: </string>
    <string name="share_subject">Join Bible-ly BiblelyClass</string>
    <string name="share_title">Invite with token: </string>

    <string name="delete_class">Are you sure you want to delete this class?</string>
    <string name="class_deleted">Class Deleted</string>
    <string name="class_delete_failed">You can only delete empty classes</string>
    <string name="leave_class">Are you sure you want to leave?</string>

    <string name="pick_date">Pick Date</string>
    <string name="select">Select</string>
    <string name="title_required">Title is required.</string>
    <string name="date_required">Date is required.</string>

    <string name="class_join_failed">You can\'t join a class you teach</string>
    <string name="already_in_class">You are already in this class</string>
    <string name="token_expired">Token Expired.</string>
    <string name="token_invalid">Token Invalid.</string>

    <string name="comment_dialog_title">Edit Comment</string>
    <string name="comment_delete_title">Are you sure you want to delete this Comment?</string>
    <string name="chapter">Chapter</string>
    <string name="user">User</string>
    <string name="comment_new">New Comment</string>
    <string name="note_required">Note is required</string>

    <string name="sign_in_fail">Google sign in failed :(</string>

    <string name="verse">verse</string>
    <string name="share_verse">Share Verse</string>
    <string name="delete_note_title">Are you sure you want to delete this note?</string>
    <string name="select_chapter">Select Chapter</string>
    <string name="select_book">Select Book</string>

    <string name="teacher_label_text">Teacher: </string>
    <string name="teacher_text">Teacher</string>
    <string name="description_label_text">Description:</string>
    <string name="no_description_text">No Description</string>
    <string name="events_label_text">Events:</string>
    <string name="no_events_text">There are no events</string>
    <string name="new_event_btn">New Event</string>\
    <string name="students_label_text">Students:</string>
    <string name="no_students_text">There are no students</string>

    <string name="enter_class_token">Enter Class Token</string>
    <string name="join_btn">Join</string>

    <string name="title">Title</string>
    <string name="description">Description</string>

    <string name="class_name">Class name</string>

    <string name="date">Date</string>

    <string name="book">book</string>

    <string name="no_notes">You have no Notes, Long Press a verse to add a note</string>

    <string name="no_events">There are no events</string>

    <string name="classes_as_teacher">Classes you teach:</string>
    <string name="classes_as_student">Classes you are enrolled in:</string>
    <string name="no_classes">You have no classes. Use the + button to add new classes</string>

    <string name="note">Note</string>
    <string name="share">Share</string>

    <string name="comments_label_text">Comments:</string>
    <string name="comment">Comment</string>

    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>

    <string name="chapterNum">Chapter%s</string>

    <string name="notification_new_event">New Event</string>
    <string name="notification_new_event_text">Event %s created</string>



    <string name="menu_board">Board</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_bible">Bible</string>
    <string name="menu_classes">Classes</string>
    <string name="menu_calendar">Share</string>
    <string name="menu_send">Send</string>
    <string name="header_sign_out">Sign Out</string>
    <string name="title_activity_class_single">ClassSingleActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
