<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_board"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_board" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_bible"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_bible" />
        <item
            android:id="@+id/classes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_classes" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_calendar"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_calendar" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
