<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_board">

    <fragment
        android:id="@+id/nav_board"
        android:name="edu.calbaptist.bible_ly.ui.board.BoardFragment"
        android:label="@string/menu_board"
        tools:layout="@layout/fragment_board"
        />


    <fragment
        android:id="@+id/nav_bible"
        android:name="edu.calbaptist.bible_ly.ui.bible.BibleFragment"
        android:label="@string/menu_bible"
        tools:layout="@layout/fragment_bible" />

    <fragment
        android:id="@+id/nav_classes"
        android:name="edu.calbaptist.bible_ly.ui.classes.ClassesFragment"
        android:label="@string/menu_classes"
        tools:layout="@layout/fragment_classes" />



</navigation>